--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #B2B6BA;
+	background-color: #232323;
 }
 
 .Mywebsite {
@@ -29,6 +29,7 @@ th, td .hover {
 	border-width: 2;
 	border-color:black;
 }
+
 
 
 
